# nma

./: .copier-answers-datasets.yml  .copier-answers.yml  .dockerignore  .envrc  .eslintrc.js  .gitignore  .pdm-python  README.md  debug_repository.py  invenio.cfg  nrp  oarepo.yaml  pyproject.toml  requirements.txt  run-tests.sh  variables
.github/workflows/: build.yaml  manual.yaml  push.yaml
common/: README.md
common/alembic/: __init__.py  nma_1_create_nma_branch.py  nma_2_initial_revision.py
common/datasets/serializers/citations/: __init__.py
common/datasets/serializers/citations/csl/: __init__.py  schema.py
common/datasets/serializers/dcat/: __init__.py  datacite-4.3.json  schema.py
common/oai/: ccmm_tools.py  http.py
common/oai/loaders/: datarepo.py  nrdata.py  zenodo.py
common/oai/tests/: harvester_test.py
common/oai/transformers/: community.py  datacite_xml.py  datarepo.py  lindat.py  lindat_mets.py  nrdata.py  zenodo.py
common/services/: schema.py  ui_schema.py
common/vocabularies/: check_vocab_mapping.py  coar_resource_types_reader.py  contributor_types.py  europa_base.py  europa_file_type.py  europa_languages.py  merge_relation_types.py
common/workflows/: default.py
datasets/: config.py  ext.py  proxies.py
datasets/files/: api.py  models.py
datasets/files/requests/: resolvers.py
datasets/models/: records.json  ui.json
datasets/records/: api.py  models.py
datasets/records/dumpers/: dumper.py  edtf.py  multilingual.py
datasets/records/jsonschemas/: datasets-1.0.0.json
datasets/records/mappings/os-v2/datasets/: datasets-1.0.0.json  datasets_draft-1.0.0.json
datasets/records/requests/: resolvers.py
datasets/resources/files/: config.py  resource.py  ui.py
datasets/resources/records/: config.py  resource.py  ui.py
datasets/services/files/: config.py  schema.py  service.py  ui_schema.py
datasets/services/records/: config.py  facets.py  permissions.py  results.py  schema.py  search.py  service.py  ui_schema.py
datasets/translations/: messages.pot
datasets/translations/cs/LC_MESSAGES/: messages.mo  messages.po
datasets/translations/en/LC_MESSAGES/: messages.mo  messages.po
datasets/views/draft_files/: api.py  app.py
datasets/views/files/: api.py  app.py
datasets/views/records/: api.py  app.py
datasets/views/request_types/: api.py  app.py
datasets/views/requests/: api.py  app.py
docker/: Dockerfile.production  development.crt  development.key  docker-compose.yml  uwsgi.ini
fixtures/: access-rights.yaml  catalogue.yaml  coar-resource-types.yaml  communities.yaml  community-types.yaml  contributor-types.yaml  file-types.yaml  languages.yaml  relation-types-4.6.yaml  resource-types.yaml  rights.yaml  subject-schemes.yaml  time-reference-types.yaml  vocabulary-languages.yaml
i18n/: webpack.py
i18n/semantic-ui/translations/: i18next.js
i18n/semantic-ui/translations/messages/: index.js
i18n/translations/: messages.mo  messages.pot
i18n/translations/cs/LC_MESSAGES/: messages.mo  messages.po
i18n/translations/en/LC_MESSAGES/: messages.mo  messages.po
models/: README.md  ccmm.yaml  datasets-custom_fields.yaml  datasets-facets.yaml  datasets-files.yaml  datasets-harvest.yaml  datasets-metadata.yaml  datasets-settings.yaml  datasets.yaml
sample_data/: catalogue.yaml  data.yaml  datasets.json  datasets.xml
scripts/: harvest_all.sh  harvest_cvut.sh  harvest_czu.sh  harvest_datacite.sh  harvest_datapilot.py  harvest_datapilot.sh  harvest_datarepo_eosc_cz.sh  harvest_lindat.sh  harvest_upol.sh  harvest_utb.sh  harvest_vscht.sh  initialize.sh  remove_datapilot.py
test-datacite/: setup.cfg
test-datacite/data/: sample_data.yaml
test-datacite/test_datacite/: config.py  ext.py  proxies.py
test-datacite/test_datacite/models/: records.json  ui.json
test-datacite/test_datacite/records/: api.py  models.py
test-datacite/test_datacite/records/dumpers/: dumper.py  edtf.py  multilingual.py
test-datacite/test_datacite/records/jsonschemas/: test_datacite-1.0.0.json
test-datacite/test_datacite/records/mappings/os-v2/test_datacite/: test_datacite-1.0.0.json
test-datacite/test_datacite/resources/records/: config.py  resource.py  ui.py
test-datacite/test_datacite/services/records/: config.py  permissions.py  results.py  schema.py  schema_datatypes.py  search.py  service.py  ui_schema.py  ui_schema_datatypes.py
test-datacite/test_datacite/translations/: messages.pot
test-datacite/test_datacite/translations/cs/LC_MESSAGES/: messages.mo  messages.po
test-datacite/test_datacite/translations/en/LC_MESSAGES/: messages.mo  messages.po
test-datacite/test_datacite/views/records/: api.py  app.py
test-datacite/tests/: conftest.py  test_resource.py  test_service.py
tests/: conftest.py  datacite_4.5.yaml  datacite_datatypes_4.5.yaml  datastreams.py  test-datacite.yaml  test_dcat_serializer.py  test_harvest.py  test_zenodo_loader.py  test_zenodo_transformer.py  zenodo_example_metadata.json
tests/dcat_serializer/: collect_keys.py  data_test.json  expected_output_file.json  extract_common_content.py  input_file.json  marshmallow_schema.py  ours.json  ours_converted.json  test_dcat_serializer.py  theirs.json  transformer.py  zenodo_example_metadata.json
tests/dcat_serializer/RDM/: schema.py
tests/dcat_serializer/junk/: converted.json
ui/: README.md
ui/branding/: __init__.py  webpack.py
ui/branding/semantic-ui/js/: branding.js
ui/branding/semantic-ui/less/: branding.less  theme.config  theme.less
ui/branding/semantic-ui/less/fonts/: .readme
ui/branding/semantic-ui/less/globals/: site.overrides  site.variables
ui/branding/templates/: .readme  css.html  footer.html  header.html  header_frontpage.html  header_login.html  javascript.html  searchbar.html
ui/branding/templates/base/: css.html  javascript.html  page.html
ui/components/: __init__.py  webpack.py
ui/components/semantic-ui/js/: custom-components.js
ui/components/templates/: .readme
ui/datasets/: __init__.py  webpack.py
ui/titlepage/: __init__.py
ui/titlepage/templates/: TitlePage.jinja
(+179 files in other folders)
