[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "deepmerge>=1.1.0",
    "json5",
    "langdetect",
    "nr-metadata",
    "oarepo-oai-pmh-harvester",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo[s3]==12.*",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_datasets = "ui.datasets.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
datasets = "datasets.views.records.app:create_app_blueprint"
datasets_file = "datasets.views.files.app:create_app_blueprint"
ui_datasets = "ui.datasets:create_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
datasets = "datasets"

[project.entry-points."invenio_db.alembic"]
repo = "common:alembic"

[project.entry-points."invenio_base.api_apps"]
datasets = "datasets.ext:DatasetsExt"

[project.entry-points."invenio_base.apps"]
datasets = "datasets.ext:DatasetsExt"

[project.entry-points."invenio_db.models"]
datasets = "datasets.records.models"
datasets_file = "datasets.files.models"

[project.entry-points."invenio_base.api_blueprints"]
datasets = "datasets.views.records.api:create_api_blueprint"
datasets_file = "datasets.views.files.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
datasets = "datasets.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
datasets = "datasets.records.jsonschemas"

[project.entry-points."oarepo.models"]
datasets = "datasets.models:records.json"

[project.entry-points."oarepo.ui"]
datasets = "datasets.models:ui.json"

[project.entry-points."invenio.datasets.response_handlers"]
nma_extras = "common.datasets.serializers.citations:citations_response_handlers"

[project.optional-dependencies]
tests = [
    "autoflake",
    "black",
    "isort",
    "pytest-invenio>=1.4.11",
    "pytest-invenio[opensearch2]",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
