

[metadata]
name = test-datacite
version = 1.0.0
description = Repository model for Test_Datacite
authors = 


[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.0.0
    deepmerge>=1.1.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = test_datacite = test_datacite.ext:Test_dataciteExt
invenio_base.apps = test_datacite = test_datacite.ext:Test_dataciteExt
invenio_db.alembic = test_datacite = test_datacite:alembic
invenio_db.models = test_datacite = test_datacite.records.models
invenio_base.api_blueprints = test_datacite = test_datacite.views.records.api:create_api_blueprint
invenio_base.blueprints = test_datacite = test_datacite.views.records.app:create_app_blueprint
invenio_search.mappings = test_datacite = test_datacite.records.mappings
invenio_jsonschemas.schemas = test_datacite = test_datacite.records.jsonschemas
oarepo.models = test_datacite = test_datacite.models:records.json
invenio_i18n.translations = test_datacite = test_datacite
oarepo.ui = test_datacite = test_datacite.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
